--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.3.2
   uuid: ^3.0.7
+  firebase: ^9.0.3
+  cloud_firestore: ^4.2.0
 
 dev_dependencies:
   flutter_test:
